# linux-ptrace

./: LICENSE  linux-ptrace.cabal  stack.yaml
System/Linux/Ptrace/: GenStruct.hs  Syscall.hs
