name:                linux-ptrace
version:             0.2.0
synopsis:            Wrapping of Linux' ptrace(2).
description:         An interface for using ptrace to inspect the state of other processes, under Linux.
category:            System
license:             MIT
license-file:        LICENSE
author:              Richard Smith
maintainer:          zygoloid@metafoo.co.uk
build-type:          Simple
cabal-version:       >= 1.6

library
  default-language: Haskell2010
  build-depends:       base > 4.7 && < 5
                     , posix-waitpid >= 0.2
                     , unix
                     , bytestring
                     , process
                     , template-haskell
                     , mmap
  exposed-modules:     System.Linux.Ptrace
                     , System.Linux.Ptrace.Syscall
                     , System.Linux.Ptrace.Types
                     , System.Linux.Ptrace.X86Regs
                     , System.Linux.Ptrace.X86_64Regs
  other-modules:       System.Linux.Ptrace.GenStruct
  other-extensions:    TemplateHaskell
                     , GeneralizedNewtypeDeriving
                     , ForeignFunctionInterface
                     , PatternGuards
                     , CPP
